--- a/park_pd.ipynb
+++ b/park_pd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "BISC       Biscayne National Park    FL  172924     25.65     -80.08"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "max    8.323148e+06  67.780000  -68.210000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "ZION        146598     37.30    -113.05  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "BISC       Biscayne National Park    FL  172924     25.65     -80.08"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "Name: BADL, dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "Name: ZION, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "ACAD         Acadia National Park    ME   47390     44.35     -68.21"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "BRCA       Bryce Canyon National Park    UT   35835     37.57    -112.18"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "ARCH       Arches National Park    UT  76519     38.68    -109.57"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "BLCA         -107.72  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
        "BLCA         CO   32950"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
        "Name: state, dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
        "YELL       2219791     44.60    -110.50  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "DENA          -150.5  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1337,6 +1337,308 @@
     "Not_WA_CA = df[~df.state.isin(['WA','CA'])].tail()\n",
     "print(f\"state in WA CA: {WA_CA}\")\n",
     "print(f\"not in WA CA: {Not_WA_CA}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>acres</th>\n",
+       "      <th>latitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Park Code</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>WRST</th>\n",
+       "      <td>8323148</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             acres  latitude\n",
+       "Park Code                   \n",
+       "WRST       8323148      61.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['acres', 'latitude']][df.acres == df['acres'].max()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(8323148)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['acres'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group state:                                         park_name state   acres  latitude  \\\n",
+      "Park Code                                                                    \n",
+      "CHIS                 Channel Islands National Park    CA  249561     34.01   \n",
+      "JOTR                     Joshua Tree National Park    CA  789745     33.79   \n",
+      "LAVO                 Lassen Volcanic National Park    CA  106372     40.49   \n",
+      "PINN                       Pinnacles National Park    CA   26606     36.48   \n",
+      "REDW                         Redwood National Park    CA  112512     41.30   \n",
+      "SEKI       Sequoia and Kings Canyon National Parks    CA  865952     36.43   \n",
+      "YOSE                        Yosemite National Park    CA  761266     37.83   \n",
+      "\n",
+      "           longitude  \n",
+      "Park Code             \n",
+      "CHIS         -119.42  \n",
+      "JOTR         -115.90  \n",
+      "LAVO         -121.51  \n",
+      "PINN         -121.16  \n",
+      "REDW         -124.00  \n",
+      "SEKI         -118.68  \n",
+      "YOSE         -119.50  \n",
+      "max latitude: 865952\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = df.groupby('state')\n",
+    "total_state = state.get_group('CA')\n",
+    "total_state_latitude = total_state['acres'].max()\n",
+    "print(f\"group state:{total_state}\")\n",
+    "print(f\"max latitude: {total_state_latitude}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "AK            8\n",
+       "CA            7\n",
+       "UT            5\n",
+       "CO            4\n",
+       "FL            3\n",
+       "AZ            3\n",
+       "WA            3\n",
+       "HI            2\n",
+       "SD            2\n",
+       "TX            2\n",
+       "ME            1\n",
+       "OH            1\n",
+       "OR            1\n",
+       "SC            1\n",
+       "NM            1\n",
+       "NV            1\n",
+       "MT            1\n",
+       "TN, NC        1\n",
+       "CA, NV        1\n",
+       "WY            1\n",
+       "AR            1\n",
+       "MI            1\n",
+       "KY            1\n",
+       "VA            1\n",
+       "ND            1\n",
+       "MN            1\n",
+       "WY, MT, ID    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['state'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_state sort :                                                 park_name       state  \\\n",
+      "Park Code                                                               \n",
+      "DENA                    Denali National Park and Preserve          AK   \n",
+      "GAAR       Gates Of The Arctic National Park and Preserve          AK   \n",
+      "GLBA               Glacier Bay National Park and Preserve          AK   \n",
+      "KATM                    Katmai National Park and Preserve          AK   \n",
+      "KEFJ                           Kenai Fjords National Park          AK   \n",
+      "KOVA                           Kobuk Valley National Park          AK   \n",
+      "LACL                Lake Clark National Park and Preserve          AK   \n",
+      "WRST       Wrangell - St Elias National Park and Preserve          AK   \n",
+      "HOSP                            Hot Springs National Park          AR   \n",
+      "GRCA                           Grand Canyon National Park          AZ   \n",
+      "PEFO                       Petrified Forest National Park          AZ   \n",
+      "SAGU                                Saguaro National Park          AZ   \n",
+      "CHIS                        Channel Islands National Park          CA   \n",
+      "JOTR                            Joshua Tree National Park          CA   \n",
+      "LAVO                        Lassen Volcanic National Park          CA   \n",
+      "PINN                              Pinnacles National Park          CA   \n",
+      "REDW                                Redwood National Park          CA   \n",
+      "SEKI              Sequoia and Kings Canyon National Parks          CA   \n",
+      "YOSE                               Yosemite National Park          CA   \n",
+      "DEVA                           Death Valley National Park      CA, NV   \n",
+      "BLCA           Black Canyon of the Gunnison National Park          CO   \n",
+      "GRSA          Great Sand Dunes National Park and Preserve          CO   \n",
+      "MEVE                             Mesa Verde National Park          CO   \n",
+      "ROMO                         Rocky Mountain National Park          CO   \n",
+      "BISC                               Biscayne National Park          FL   \n",
+      "DRTO                           Dry Tortugas National Park          FL   \n",
+      "EVER                             Everglades National Park          FL   \n",
+      "HALE                              Haleakala National Park          HI   \n",
+      "HAVO                       Hawaii Volcanoes National Park          HI   \n",
+      "MACA                           Mammoth Cave National Park          KY   \n",
+      "ACAD                                 Acadia National Park          ME   \n",
+      "ISRO                            Isle Royale National Park          MI   \n",
+      "VOYA                              Voyageurs National Park          MN   \n",
+      "GLAC                                Glacier National Park          MT   \n",
+      "THRO                     Theodore Roosevelt National Park          ND   \n",
+      "CAVE                       Carlsbad Caverns National Park          NM   \n",
+      "GRBA                            Great Basin National Park          NV   \n",
+      "CUVA                        Cuyahoga Valley National Park          OH   \n",
+      "CRLA                            Crater Lake National Park          OR   \n",
+      "CONG                               Congaree National Park          SC   \n",
+      "BADL                               Badlands National Park          SD   \n",
+      "WICA                              Wind Cave National Park          SD   \n",
+      "GRSM                  Great Smoky Mountains National Park      TN, NC   \n",
+      "BIBE                               Big Bend National Park          TX   \n",
+      "GUMO                    Guadalupe Mountains National Park          TX   \n",
+      "ARCH                                 Arches National Park          UT   \n",
+      "BRCA                           Bryce Canyon National Park          UT   \n",
+      "CANY                            Canyonlands National Park          UT   \n",
+      "CARE                           Capitol Reef National Park          UT   \n",
+      "ZION                                   Zion National Park          UT   \n",
+      "SHEN                             Shenandoah National Park          VA   \n",
+      "MORA                          Mount Rainier National Park          WA   \n",
+      "NOCA                         North Cascades National Park          WA   \n",
+      "OLYM                                Olympic National Park          WA   \n",
+      "GRTE                            Grand Teton National Park          WY   \n",
+      "YELL                            Yellowstone National Park  WY, MT, ID   \n",
+      "\n",
+      "             acres  latitude  longitude  \n",
+      "Park Code                                \n",
+      "DENA       3372402     63.33    -150.50  \n",
+      "GAAR       7523898     67.78    -153.30  \n",
+      "GLBA       3224840     58.50    -137.00  \n",
+      "KATM       3674530     58.50    -155.00  \n",
+      "KEFJ        669983     59.92    -149.65  \n",
+      "KOVA       1750717     67.55    -159.28  \n",
+      "LACL       2619733     60.97    -153.42  \n",
+      "WRST       8323148     61.00    -142.00  \n",
+      "HOSP          5550     34.51     -93.05  \n",
+      "GRCA       1217403     36.06    -112.14  \n",
+      "PEFO         93533     35.07    -109.78  \n",
+      "SAGU         91440     32.25    -110.50  \n",
+      "CHIS        249561     34.01    -119.42  \n",
+      "JOTR        789745     33.79    -115.90  \n",
+      "LAVO        106372     40.49    -121.51  \n",
+      "PINN         26606     36.48    -121.16  \n",
+      "REDW        112512     41.30    -124.00  \n",
+      "SEKI        865952     36.43    -118.68  \n",
+      "YOSE        761266     37.83    -119.50  \n",
+      "DEVA       4740912     36.24    -116.82  \n",
+      "BLCA         32950     38.57    -107.72  \n",
+      "GRSA         42984     37.73    -105.51  \n",
+      "MEVE         52122     37.18    -108.49  \n",
+      "ROMO        265828     40.40    -105.58  \n",
+      "BISC        172924     25.65     -80.08  \n",
+      "DRTO         64701     24.63     -82.87  \n",
+      "EVER       1508538     25.32     -80.93  \n",
+      "HALE         29094     20.72    -156.17  \n",
+      "HAVO        323431     19.38    -155.20  \n",
+      "MACA         52830     37.18     -86.10  \n",
+      "ACAD         47390     44.35     -68.21  \n",
+      "ISRO        571790     48.10     -88.55  \n",
+      "VOYA        218200     48.50     -92.88  \n",
+      "GLAC       1013572     48.80    -114.00  \n",
+      "THRO         70447     46.97    -103.45  \n",
+      "CAVE         46766     32.17    -104.44  \n",
+      "GRBA         77180     38.98    -114.30  \n",
+      "CUVA         32950     41.24     -81.55  \n",
+      "CRLA        183224     42.94    -122.10  \n",
+      "CONG         26546     33.78     -80.78  \n",
+      "BADL        242756     43.75    -102.50  \n",
+      "WICA         28295     43.57    -103.48  \n",
+      "GRSM        521490     35.68     -83.53  \n",
+      "BIBE        801163     29.25    -103.25  \n",
+      "GUMO         86416     31.92    -104.87  \n",
+      "ARCH         76519     38.68    -109.57  \n",
+      "BRCA         35835     37.57    -112.18  \n",
+      "CANY        337598     38.20    -109.93  \n",
+      "CARE        241904     38.20    -111.17  \n",
+      "ZION        146598     37.30    -113.05  \n",
+      "SHEN        199045     38.53     -78.35  \n",
+      "MORA        235625     46.85    -121.75  \n",
+      "NOCA        504781     48.70    -121.20  \n",
+      "OLYM        922651     47.97    -123.50  \n",
+      "GRTE        309995     43.73    -110.80  \n",
+      "YELL       2219791     44.60    -110.50  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_state = df.sort_values(by= ['state' , 'park_name'], ascending= True)\n",
+    "print(f\"df_state sort : {df_state}\")"
    ]
   },
   {
