--- a/pd_ex.ipynb
+++ b/pd_ex.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -485,58 +485,58 @@
       "Chips and Mild Fresh Tomato Salsa                                                      0   \n",
       "Veggie Crispy Tacos                    [Fresh Tomato Salsa (Mild), [Pinto Beans, Rice...   \n",
       "\n",
-      "                                       item_price  total_price  \n",
-      "item_name                                                       \n",
-      "Chicken Bowl                              7342.73      8044.63  \n",
-      "Chicken Burrito                           5575.82      6387.06  \n",
-      "Chips and Guacamole                       2201.04      2475.62  \n",
-      "Steak Burrito                             3851.43      4236.13  \n",
-      "Canned Soft Drink                          438.75       603.75  \n",
-      "Chips                                      494.34       580.34  \n",
-      "Steak Bowl                                2260.19      2479.81  \n",
-      "Bottled Water                              302.56       649.18  \n",
-      "Chips and Fresh Tomato Salsa               361.36      1033.96  \n",
-      "Canned Soda                                137.34       191.84  \n",
-      "Chicken Salad Bowl                        1228.75      1506.25  \n",
-      "Chicken Soft Tacos                        1108.09      1199.01  \n",
-      "Side of Chips                              185.90       290.68  \n",
-      "Veggie Burrito                             934.77      1002.27  \n",
-      "Barbacoa Burrito                           894.75       894.75  \n",
-      "Veggie Bowl                                867.99       901.95  \n",
-      "Carnitas Bowl                              736.71       830.71  \n",
-      "Barbacoa Bowl                              672.36       672.36  \n",
-      "Carnitas Burrito                           597.83       616.33  \n",
-      "Steak Soft Tacos                           536.05       554.55  \n",
-      "6 Pack Soft Drink                          356.95       369.93  \n",
-      "Chicken Crispy Tacos                       472.13       524.11  \n",
-      "Chips and Tomatillo Red Chili Salsa        147.50       159.30  \n",
-      "Chips and Tomatillo Green Chili Salsa      132.75       144.55  \n",
-      "Carnitas Soft Tacos                        375.94       375.94  \n",
-      "Steak Crispy Tacos                         357.34       375.32  \n",
-      "Chips and Tomatillo-Green Chili Salsa       78.87        88.43  \n",
-      "Steak Salad Bowl                           343.59       391.15  \n",
-      "Nantucket Nectar                            98.31       111.87  \n",
-      "Chips and Tomatillo-Red Chili Salsa         59.75        93.21  \n",
-      "Barbacoa Soft Tacos                        250.46       250.46  \n",
-      "Chips and Roasted Chili Corn Salsa          67.85        73.75  \n",
-      "Izze                                        67.80        67.80  \n",
-      "Veggie Salad Bowl                          182.50       182.50  \n",
-      "Chips and Roasted Chili-Corn Salsa          43.02        43.02  \n",
-      "Barbacoa Crispy Tacos                      120.21       138.71  \n",
-      "Barbacoa Salad Bowl                        106.40       106.40  \n",
-      "Chicken Salad                               81.09        81.09  \n",
-      "Carnitas Crispy Tacos                       77.96        95.94  \n",
-      "Veggie Soft Tacos                           73.96        90.94  \n",
-      "Burrito                                     44.40        44.40  \n",
-      "Carnitas Salad Bowl                         66.34        66.34  \n",
-      "Veggie Salad                                50.94        50.94  \n",
-      "Bowl                                        29.60        74.00  \n",
-      "Steak Salad                                 35.66        35.66  \n",
-      "Salad                                       14.80        14.80  \n",
-      "Crispy Tacos                                14.80        14.80  \n",
-      "Carnitas Salad                               8.99         8.99  \n",
-      "Chips and Mild Fresh Tomato Salsa            3.00         3.00  \n",
-      "Veggie Crispy Tacos                          8.49         8.49  \n"
+      "                                                                              item_price  \n",
+      "item_name                                                                                 \n",
+      "Chicken Bowl                           $16.98 $10.98 $11.25 $8.75 $8.49 $11.25 $8.75 ...  \n",
+      "Chicken Burrito                        $8.49 $8.49 $10.98 $8.49 $10.98 $10.98 $8.75 $...  \n",
+      "Chips and Guacamole                    $4.45 $4.45 $4.45 $4.45 $4.45 $3.99 $4.45 $3.9...  \n",
+      "Steak Burrito                          $11.75 $9.25 $8.99 $11.75 $8.99 $8.99 $8.99 $8...  \n",
+      "Canned Soft Drink                      $1.25 $1.25 $1.25 $1.25 $1.25 $1.25 $1.25 $1.2...  \n",
+      "Chips                                  $2.15 $2.15 $2.15 $2.15 $2.15 $2.15 $4.30 $2.1...  \n",
+      "Steak Bowl                             $8.99 $8.99 $11.75 $11.75 $8.99 $11.48 $9.25 $...  \n",
+      "Bottled Water                          $1.09 $1.09 $1.09 $1.50 $1.50 $1.50 $3.00 $1.5...  \n",
+      "Chips and Fresh Tomato Salsa           $2.39 $2.39 $2.39 $2.95 $2.95 $2.95 $2.95 $2.3...  \n",
+      "Canned Soda                            $2.18 $1.09 $2.18 $1.09 $1.09 $1.09 $1.09 $2.1...  \n",
+      "Chicken Salad Bowl                     $8.75 $22.50 $22.50 $8.75 $17.50 $8.75 $8.75 $...  \n",
+      "Chicken Soft Tacos                     $8.75 $8.75 $8.75 $8.75 $11.25 $8.49 $8.49 $8....  \n",
+      "Side of Chips                          $1.69 $1.69 $1.69 $1.69 $1.69 $1.69 $1.69 $1.6...  \n",
+      "Veggie Burrito                         $11.25 $8.49 $11.25 $11.25 $10.98 $8.49 $8.49 ...  \n",
+      "Barbacoa Burrito                       $8.99 $9.25 $9.25 $11.75 $11.75 $9.25 $8.99 $1...  \n",
+      "Veggie Bowl                            $11.25 $8.49 $11.25 $11.25 $8.49 $11.25 $11.25...  \n",
+      "Carnitas Bowl                          $8.99 $11.75 $9.25 $11.48 $8.99 $8.99 $23.50 $...  \n",
+      "Barbacoa Bowl                          $11.75 $11.75 $9.25 $8.99 $9.25 $11.75 $9.25 $...  \n",
+      "Carnitas Burrito                       $8.99 $9.25 $11.75 $9.25 $9.25 $9.25 $11.75 $9...  \n",
+      "Steak Soft Tacos                       $9.25 $9.25 $8.99 $9.25 $8.99 $8.99 $9.25 $9.2...  \n",
+      "6 Pack Soft Drink                      $6.49 $6.49 $6.49 $6.49 $6.49 $6.49 $6.49 $6.4...  \n",
+      "Chicken Crispy Tacos                   $8.75 $17.50 $11.25 $8.49 $8.49 $11.25 $8.75 $...  \n",
+      "Chips and Tomatillo Red Chili Salsa    $2.95 $2.95 $2.95 $2.95 $2.95 $2.95 $2.95 $2.9...  \n",
+      "Chips and Tomatillo Green Chili Salsa  $2.95 $2.95 $5.90 $2.95 $2.95 $2.95 $2.95 $2.9...  \n",
+      "Carnitas Soft Tacos                    $9.25 $9.25 $9.25 $9.25 $9.25 $8.99 $8.99 $8.9...  \n",
+      "Steak Crispy Tacos                     $9.25 $8.99 $9.25 $8.69 $8.99 $9.25 $8.99 $9.2...  \n",
+      "Chips and Tomatillo-Green Chili Salsa  $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.3...  \n",
+      "Steak Salad Bowl                       $23.78 $11.89 $9.39 $23.78 $11.89 $11.89 $11.8...  \n",
+      "Nantucket Nectar                       $3.39 $3.39 $3.39 $3.39 $3.39 $3.39 $6.78 $3.3...  \n",
+      "Chips and Tomatillo-Red Chili Salsa    $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.3...  \n",
+      "Barbacoa Soft Tacos                    $9.25 $9.25 $8.99 $9.25 $9.25 $11.75 $11.75 $9...  \n",
+      "Chips and Roasted Chili Corn Salsa     $2.95 $2.95 $2.95 $2.95 $2.95 $2.95 $2.95 $2.9...  \n",
+      "Izze                                   $3.39 $3.39 $3.39 $3.39 $3.39 $3.39 $3.39 $3.3...  \n",
+      "Veggie Salad Bowl                      $11.25 $11.25 $11.25 $11.25 $8.75 $8.75 $11.25...  \n",
+      "Chips and Roasted Chili-Corn Salsa     $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.39 $2.3...  \n",
+      "Barbacoa Crispy Tacos                  $11.75 $9.25 $11.48 $11.75 $9.25 $9.25 $8.99 $...  \n",
+      "Barbacoa Salad Bowl                    $11.89 $11.89 $9.39 $9.39 $9.39 $11.89 $11.89 ...  \n",
+      "Chicken Salad                          $10.98 $10.98 $8.49 $8.49 $8.49 $8.49 $8.49 $8...  \n",
+      "Carnitas Crispy Tacos                      $9.25 $11.75 $8.99 $11.75 $8.99 $17.98 $9.25   \n",
+      "Veggie Soft Tacos                          $11.25 $8.75 $8.49 $11.25 $8.75 $8.49 $16.98   \n",
+      "Burrito                                             $7.40 $7.40 $7.40 $7.40 $7.40 $7.40   \n",
+      "Carnitas Salad Bowl                             $11.89 $9.39 $11.89 $9.39 $11.89 $11.89   \n",
+      "Veggie Salad                                        $8.49 $8.49 $8.49 $8.49 $8.49 $8.49   \n",
+      "Bowl                                                                       $22.20 $7.40   \n",
+      "Steak Salad                                                     $8.99 $8.99 $8.99 $8.69   \n",
+      "Salad                                                                       $7.40 $7.40   \n",
+      "Crispy Tacos                                                                $7.40 $7.40   \n",
+      "Carnitas Salad                                                                    $8.99   \n",
+      "Chips and Mild Fresh Tomato Salsa                                                 $3.00   \n",
+      "Veggie Crispy Tacos                                                               $8.49   \n"
      ]
     }
    ],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -735,25 +735,26 @@
       "Barbacoa Burrito        9.832418  8.69  11.75\n",
       "Barbacoa Crispy Tacos  10.928182  8.99  18.50\n",
       "Barbacoa Salad Bowl    10.640000  9.39  11.89\n",
-      "total: mean    10.187273\n",
-      "min      8.690000\n",
-      "max     11.750000\n",
-      "Name: Barbacoa Bowl, dtype: float64\n",
-      "group by:                     mean   min    max\n",
-      "item_name                            \n",
-      "Barbacoa Bowl  10.187273  8.69  11.75\n"
+      "total:                         mean   min    max\n",
+      "item_name                                \n",
+      "Barbacoa Bowl      10.187273  8.69  11.75\n",
+      "6 Pack Soft Drink   6.610185  6.49  12.98\n",
+      "group by:                         mean   min    max\n",
+      "item_name                                \n",
+      "6 Pack Soft Drink   6.610185  6.49  12.98\n",
+      "Barbacoa Bowl      10.187273  8.69  11.75\n"
      ]
     }
    ],
    "source": [
-    "print(f\"test: {df.groupby('item_name').item_price.agg(['mean', 'min', 'max']).head()}\")\n",
-    "print(f\"total: {df.groupby('item_name')['item_price'].agg(['mean' , 'min', 'max']).loc['Barbacoa Bowl']}\")\n",
-    "print(f\"group by: {df[df['item_name'] == 'Barbacoa Bowl'].groupby('item_name')['item_price'].agg(['mean' , 'min', 'max'])}\")"
+    "print(f\"test: {df.groupby('item_name')['item_price'].agg(['mean', 'min', 'max']).head()}\")\n",
+    "print(f\"total: {df.groupby('item_name')['item_price'].agg(['mean' , 'min', 'max']).loc[['Barbacoa Bowl', '6 Pack Soft Drink']]}\")\n",
+    "print(f\"group by: {df[df['item_name'].isin(['6 Pack Soft Drink', 'Barbacoa Bowl'])].groupby('item_name')['item_price'].agg(['mean' , 'min', 'max'])}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1741,6 +1742,26 @@
     "item_name_groupby['total_price'] = item_name_groupby['total_price'].astype(int)\n",
     "greater_than_8000 = item_name_groupby[item_name_groupby['total_price'] > 8000]\n",
     "print(f\"name: {greater_than_8000}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_name_groupby['total_price'].dtype"
    ]
   },
   {
