--- a/pd_ex.ipynb
+++ b/pd_ex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "max    1834.000000    15.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "max    1825.000000       1.0   11.750000    11.750000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "7  [Tomatillo Red Chili Salsa, [Fajita Vegetables...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...       16.98        33.96  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "Barbacoa Salad Bowl        106.40      1064.00  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,6 +1763,151 @@
    "source": [
     "item_name_groupby['total_price'].dtype"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combine two df\n",
+    "\n",
+    "df1 = pd.DataFrame({\n",
+    "    'id': [1,2,3,4,5,6,7],\n",
+    "    'age': [25,33,55,12,48,32,None]\n",
+    "})\n",
+    "\n",
+    "df2 = pd.DataFrame({\n",
+    "    'id': [1,2,3,4,6,7,8],\n",
+    "    'score': [88,12,55,87,89,99,95]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id   age  score\n",
+      "0   1  25.0   88.0\n",
+      "1   2  33.0   12.0\n",
+      "2   3  55.0   55.0\n",
+      "3   4  12.0   87.0\n",
+      "4   5  48.0    NaN\n",
+      "5   6  32.0   89.0\n",
+      "6   7   NaN   99.0\n",
+      "7   8   NaN   95.0\n",
+      "   id   age  score\n",
+      "0   1  25.0   88.0\n",
+      "1   2  33.0   12.0\n",
+      "2   3  55.0   55.0\n",
+      "3   4  12.0   87.0\n",
+      "4   5  48.0   -1.0\n",
+      "5   6  32.0   89.0\n",
+      "6   7  32.5   99.0\n",
+      "7   8  32.5   95.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "combine_df = pd.merge(df1,df2, on = 'id', how = 'outer')\n",
+    "print(combine_df)\n",
+    "\n",
+    "combine_df['age'] = combine_df['age'].fillna(combine_df['age'].median()) #fill na with average\n",
+    "combine_df['score'] = combine_df['score'].fillna(-1) #label missing value\n",
+    "\n",
+    "print(combine_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 0.1202\n"
+     ]
+    }
+   ],
+   "source": [
+    "#T-test\n",
+    "from scipy.stats import ttest_ind\n",
+    "group_a = [0,1,0,1,1,0,1,0]\n",
+    "group_b = [1,1,1,1,0,1,1,1]\n",
+    "stat, p_value = ttest_ind(group_a, group_b)\n",
+    "print(f\"p-value: {p_value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z-test → z = -3.96, p-value = 0.0001\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Z-test\n",
+    "from statsmodels.stats.weightstats import ztest\n",
+    "import numpy as np\n",
+    "group_a = np.random.normal(100,15,100)\n",
+    "group_b = np.random.normal(105,15,100)\n",
+    "\n",
+    "z_stat, p_value = ztest(group_a,group_b)\n",
+    "print(f\"Z-test → z = {z_stat:.2f}, p-value = {p_value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample = 64\n",
+      "experiment power = 0.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Power Analysis\n",
+    "from statsmodels.stats.power import TTestIndPower\n",
+    "analysis = TTestIndPower()\n",
+    "#sample effect_size = 0.5, significant value= 0.05, power = 80%\n",
+    "sample_size = analysis.solve_power(effect_size=0.5, alpha=0.05, power = 0.8, alternative= 'two-sided')\n",
+    "print(f\"sample = {sample_size:.0f}\")\n",
+    "\n",
+    "power = analysis.power(effect_size=0.5, nobs1 = 100, alpha= 0.05)\n",
+    "print(f\"experiment power = {power:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STAR: S for Situation(Background), T for Task, A for action, R for result. Anwer Question Follow This Rule For Behavior Question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
